--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "export": "next build",
+    "deploy": "npm run build"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
