--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "export": "next export",
-    "deploy": "npm run build && npm run export"
+    "export": "echo 'Static export is handled by next build when output: export is set'",
+    "deploy": "npm run build"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
